# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycachegen"
version = "0.1.0"
description = "PyCacheGen"
readme = "README.md"
authors = [
    { name = "REDACTED FOR ARTIFACT EVALUATION", email = "redacted@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
	"Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["verilog", "cache"]
dependencies = ["amaranth==0.5.0", "amaranth-yosys==0.40.0.0.post97"]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit", "bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/artifactevalbcd7/pycachegen"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"',]
"src/pycachegen/__init__.py" = ['__version__ = "{version}"']

[tool.pytest.ini_options]
testpaths = "tests/"
python_files = "*_tb_*.py"

[tool.black]
line-length = 120
